--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@
       </nav>
     </div>
   </header>
-
-  <!-- HERO SECTION -->
   <section id="hero">
     <div class="container">
       <h2>Welcome to My Portfolio</h2>
@@ -30,31 +28,23 @@
       <a href="#projects" class="btn">View My Work</a>
     </div>
   </section>
-
-  <!-- ABOUT SECTION -->
   <section id="about" class="container">
     <h2>About Me</h2>
     <div class="about-content">
-      <img src="/avatar.png" alt="Avatar">
+      <img src="avatar.png" alt="Avatar">
       <p>Hello! My name is <strong>Zakaria Ibrahim</strong>. I’m currently studying web design and development. I enjoy combining creativity and logic to build modern, responsive websites that provide great user experiences. This page is the start of my professional portfolio, and I’ll continue to expand it as my skills develop.</p>
     </div>
   </section>
-
-  <!-- PROJECTS SECTION -->
   <section id="projects" class="container">
     <h2>My Work</h2>
     <p>Here are some projects I’ve created to showcase my web design and development skills. The project section uses CSS Grid to ensure the layout works smoothly on all devices.</p>
-    
     <div class="project-grid">
-      <!-- Food Delivery Website Project -->
       <div class="project-card">
         <img src="food delivery.jpeg" alt="food delivery website">
         <h3>Food Delivery Website</h3>
         <p>This project is a responsive delivery website where users can browse restaurants, view menus, and place orders online. The focus was on creating a clean design, intuitive navigation, and mobile-first layout to ensure an excellent user experience.</p>
         <p><strong>Technologies:</strong> HTML5, CSS3, Flexbox, CSS Grid, Responsive Design</p>
       </div>
-
-      <!-- Barber Appointment Booking Project -->
       <div class="project-card">
         <img src="barber shop.jpeg" alt="barber appointment booking web app">
         <h3>Barber Appointment Booking Web App</h3>
@@ -63,8 +53,6 @@
       </div>
     </div>
   </section>
-
-  <!-- CONTACT SECTION -->
   <section id="contact" class="container">
     <h2>Contact Me</h2>
     <p>If you’d like to collaborate or learn more about my work, feel free to reach out!</p>
@@ -73,8 +61,6 @@
       <li>LinkedIn: <a href="https://www.linkedin.com/in/zakaria-ibrahim-409983387?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app">Zakaria Ibrahim</a></li>
     </ul>
   </section>
-
-  <!-- FOOTER -->
   <footer>
     <p>© 2025 Zakaria Ibrahim. All rights reserved.</p>
   </footer>
